@@ -8,6 +8,9 @@ v1.0.1_03
   - Added minimum version prereq of Moo to fix issue with undef
     defaults.
 
+  [Enhancements]
+  - Changed to use Path::Tiny instead of Path::Class.
+
 v1.0.1_02 2014-10-08 00:49 BST
   [Documentation]
   - Added missing timestamp to Changes.
